# cog

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SPEC.md  comptime_design.md  first_prompt.txt  grammar.md  roadmap.md  spec.md
examples/: README.md  v0_0_1.cg  v0_0_1_1.cg
examples/auto_placeholder/: main.cg
examples/basic_codegen/: main.cg
examples/comptime_consts/: main.cg  util.cg
examples/comptime_function_calls/: main.cg
examples/comptime_parameters/: main.cg
examples/control_flow/: main.cg
examples/crc32_tool/: main.cg
examples/ffi_minimal/: main.cg
examples/ffi_tags_strings/: main.cg
examples/function_pointers/: main.cg
examples/hello_world/: main.cg
examples/inherent_methods/: main.cg  util.cg
examples/legacy/: v0_0_1_1.cg
examples/legacy/v0_0_10/: main.cg  util.cg
examples/legacy/v0_0_4/: main.cg  util.cg
examples/main_args_i32/: main.cg
examples/main_args_unit/: main.cg
examples/main_export_c/: main.cg
examples/main_unit/: main.cg
examples/match_exhaustiveness/: main.cg
examples/match_or_patterns/: main.cg
examples/modules_use/: main.cg  util.cg
examples/never_type/: main.cg
examples/numerics_arrays_floats/: main.cg
examples/perfect_hash/: README.md  cstr.cg  main.cg  phf.cg
examples/pointers_and_deref/: main.cg
examples/size_align_builtins/: main.cg
examples/tuple_structs/: main.cg
examples/tuples/: main.cg
examples/type_level_calls/: main.cg
examples/user_option_result/: main.cg
examples/v0_0_10/: main.cg
examples/v0_0_11/: main.cg
examples/v0_0_12/: main.cg
examples/v0_0_3/: main.cg
examples/v0_0_5/: main.cg  util.cg
examples/v0_0_6/: main.cg
examples/v0_0_9/: main.cg
examples/v0_0_9_methods/: main.cg
spec/: README.md  auto.md  build_modes.md  builtins.md  comptime.md  expressions.md  future.md  hir.md  items.md  layout_abi.md  lexical.md  mir.md  modules.md  moves.md  patterns.md  stdlib.md  syntax.md  tests.md  types.md
src/: ast.cpp  ast.hpp  check.cpp  check.hpp  comptime.cpp  comptime.hpp  diag.cpp  diag.hpp  emit_llvm.cpp  emit_llvm.hpp  hir.cpp  hir.hpp  layout.cpp  layout.hpp  lexer.l  llvm_backend.cpp  llvm_backend.hpp  lower_mir.cpp  lower_mir.hpp  main.cpp  mir.cpp  mir.hpp  mir_interp.cpp  mir_interp.hpp  parse.cpp  parse.hpp  parse_state.cpp  parse_state.hpp  parser.y  resolve.cpp  resolve.hpp  sem.hpp  session.cpp  session.hpp  source.cpp  source.hpp  span.hpp  target.cpp  target.hpp  types.cpp  (+1 more)
test/negative/: auto_in_cast_target.cg  auto_in_enum_payload.cg  auto_in_extern_signature.cg  auto_in_struct_field.cg  auto_in_type_alias.cg  compile_error_outside_comptime.cg  function_pointer_to_auto_fn.cg  int_literal_does_not_fit.cg  main_args_requires_export.cg  main_bad_signature.cg  no_main.cg  non_exhaustive_match.cg  type_call_not_type.cg  type_enum_tagged_payload.cg  type_struct_duplicate_field.cg  type_struct_field_ty_is_type.cg
